force-app/main/default/objects/PassiveContactRecipient__c/PassiveContactRecipient__c.object-meta.xml
<CustomObject>
    <description>Objet référentiel pour définir le propriétaire d&apos;un RDV passif</description>
    <label>Destinataire contact passif</label>
    <nameField>
        <displayFormat>DCP/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Destinataires contact passif</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>