force-app/main/default/objects/PassiveContactRecipient__c/fields/entity__c.field-meta.xml
<CustomField>
    <fullName>entity__c</fullName>
    <label>Entité</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Vous devez sélectionner une entité de type magasin!</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Entity</value>
        </filterItems>
        <filterItems>
            <field>Account.entityType__r.Name</field>
            <operation>equals</operation>
            <value>Magasin</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Destinataires contact passif</relationshipLabel>
    <relationshipName>PassiveContactRecipients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>