force-app/main/default/objects/PassiveContactRecipient__c/fields/recipientType__c.field-meta.xml
<CustomField>
    <fullName>recipientType__c</fullName>
    <label>Type de destinataire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>DV</fullName>
            </value>
            <value>
                <fullName>DVA</fullName>
            </value>
            <value>
                <fullName>REF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>