force-app/main/default/objects/PassiveContactRecipient__c/fields/recipientUser__c.field-meta.xml
<CustomField>
    <fullName>recipientUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinataire</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PassiveContactRecipients</relationshipName>
    <type>Lookup</type>
</CustomField>