force-app/main/default/objects/PassiveContactRecipient__c/validationRules/VR_PassiveContactRecipient_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PassiveContactRecipient_EndDate</fullName>
    <active>true</active>
    <description>La date de fin de validité doit être supérieure ou égale à la date de début de validité</description>
    <errorConditionFormula>$User.ByPassValidationRule__c = false &amp;&amp;
endDate__c &lt; startDate__c</errorConditionFormula>
    <errorDisplayField>endDate__c</errorDisplayField>
    <errorMessage>La date de fin de validité doit être supérieure ou égale à la date de début de validité !</errorMessage>
</ValidationRule>